--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,15 @@
     <string name="app_name">RecyclerViewFragment</string>
     <string name="title_fruit_list_fragment">Fruit Lister</string>
     <string name="title_fruit_detail_fragment">Fruit Detail</string>
+    <string name="sugar">sugar</string>
+    <string name="calories">calories</string>
+    <string name="fat">fat</string>
+    <string name="protein">protein</string>
+    <string name="carbohydrates">carbohydrates</string>
+    <string name="nutritions">nutritions</string>
+    <string name="order">order</string>
+    <string name="family">family</string>
+    <string name="id">id</string>
+    <string name="name">name</string>
+    <string name="genus">genus</string>
 </resources>
